Añadido 3 controladores y factoria. Modificado openapi.yaml
